Fix overflowing text entries

--- a/gtk-3.0/apps/_gnome.scss
+++ b/gtk-3.0/apps/_gnome.scss
@@ -68,6 +68,11 @@
   }
 
   .titlebar {
+    .search {
+      border: 1px solid transparent;
+      border-radius: 3px;
+      box-shadow: none;
+    }
     .path-bar-box {
       .dim-label {
         color:transparent;
